# ColorMC.Android

./: .gitmodules
.github/workflows/: build.yml  dotnet.yml
src/: ColorMC.Android.sln
src/ColorMC.Android/: ColorMC.Android.csproj  ColorMCAndroid.cs  ColorMCApplication.cs  GameService.cs  JavaUnpack.cs  PhoneConfigObj.cs  PhoneConfigUtils.cs  PhoneControl.cs
src/ColorMC.Android.Render/: AndroidHelper.cs  ColorMC.Android.GLRender.csproj  GLHelper.cs  GLSurface.cs  GameRender.cs  ImageRenderer.cs  LwjglKeycode.cs  QuadRenderer.cs
src/ColorMC.Android/GameButton/: ButtonData.cs  ButtonGroup.cs  ButtonLayout.cs  ButtonManage.cs  ButtonView.cs  IButtonFuntion.cs
src/ColorMC.Android/Libs/: colorpickerview-2.3.1-20240401.020036-20.aar
src/ColorMC.Android/Properties/: AndroidManifest.xml
src/ColorMC.Android/Transforms/: Metadata.xml
src/ColorMC.Android/UI/: ButtonEditDialog.cs  ButtonEditGroupDialog.cs  ButtonGroupListDialog.cs  ButtonLayoutListDialog.cs  DialogHelper.cs  Tab4Fragment.cs
src/ColorMCNative/colormc_native/: build.gradle
src/ColorMCNative/colormc_native/src/main/cpp/: CMakeLists.txt  test.c
src/ColorMCNative/colormc_native/src/main/cpp/run/: context_list.h  game_sock.c  render_sock.c  run.c  run.h
src/ColorMCNative/colormc_native/src/main/cpp/run/dl_loader/: ah_loader.c  ah_loader.h  egl_loader.c  gl_loader.c  gles_loader.c  mesa_loader.c  mesa_loader.h
src/ColorMCNative/colormc_native/src/main/cpp/run/lwjgl_bridges/: lwjgl_use.c
src/ColorMCNative/colormc_native/src/main/cpp/run/render/: render_gl4es.c  render_gl4es.h  render_zink.c
(+21 files in other folders)
